# ecmwf_models

./: .coverage.wolfgang-laptop.6088.103788  .coverage.wolfgang-laptop.6092.507310  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CONTRIBUTING.rst  DEV_INSTALL  Dockerfile  LICENSE.txt  README.rst  __init__.py  doc_requirements.txt  environment.yml  environment_pinned.yml  environment_pinned_py2.yml  environment_pinned_py3.yml  install.sh  interface.py  linux-requirements.txt  optional_requirements.txt  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  win-requirements.txt
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: Makefile  conf.py  download.rst  env.yml  environment.yml  img2ts.rst  img_read.rst  index.rst  install.rst  ts_read.rst  variables_era5.rst  variables_era5land.rst
ecmwf_models/: ERA5_landmask_025.nc  __init__.py  download.py  download_era5.py  download_eraint.py  grid.py  interface.py  reshuffle.py  skeleton.py  time_series.py  utils.py
ecmwf_models/era5/: download.py  era5-land_lut.csv  era5_lut.csv  interface.py  reshuffle.py
ecmwf_models/erainterim/: download.py  downoad.py  eraint_lut.csv  interface.py  reshuffle.py
environment/: latest.yml  pinned_linux.yml
src/ecmwf_models/: __init__.py  cli.py  extract.py  glob.py  globals.py  grid.py  interface.py  utils.py
src/ecmwf_models/era5/: download.py  era5-land_lut.csv  era5_lut.csv  img.py  interface.py  reader.py  reshuffle.py
src/ecmwf_models/era5/land_definition_files/: landmask_0.1_0.1.nc  landmask_0.25_0.25.nc
src/ecmwf_models/erainterim/: download.py  eraint_lut.csv  interface.py  reshuffle.py
src/ecmwf_models/local_scripts/: __init__.py  compare_landpoints_allpoints.py  compare_old_new.py  cp_map.py  era5_breaks.py  era5_landgrid.py  era5_subgrid.py  read_era5.py  reshuffle_core_era5.sh
tests/: __init__.py  conftest.py  test_download.py  test_grid.py  test_interface.py  test_reshuffle.py  test_skeleton.py  test_utils.py
tests/old/: test_interface.py
tests/test_data/ERA-Interim/: example_downloaded_raw.grb
tests/test_data/ERA-Interim/grib/2000/001/: ERA-Interim_OPER_0001_AN_20000101_0000.grb  ERA-Interim_OPER_0001_AN_20000101_0600.grb  ERA-Interim_OPER_0001_AN_20000101_1200.grb  ERA-Interim_OPER_0001_AN_N128_20000101_1800.grb
tests/test_data/ERA5/: example_downloaded_raw.nc
tests/test_data/ei_2000/: 39.128_EI_OPER_0001_AN_N128_20000101_0600_0.grb  39.128_EI_OPER_0001_AN_N128_20000101_1800_0.grb  39.128_EI_OPER_0001_AN_N128_20000102_0000_0.grb  39.128_EI_OPER_0001_AN_N128_20000102_0600_0.grb  39.128_EI_OPER_0001_AN_N128_20000102_1200_0.grb  39.128_EI_OPER_0001_AN_N128_20000102_1800_0.grb  40.128_EI_OPER_0001_AN_N128_20000101_0000_0.grb  40.128_EI_OPER_0001_AN_N128_20000101_0600_0.grb  40.128_EI_OPER_0001_AN_N128_20000101_1200_0.grb  40.128_EI_OPER_0001_AN_N128_20000101_1800_0.grb  40.128_EI_OPER_0001_AN_N128_20000102_0000_0.grb  40.128_EI_OPER_0001_AN_N128_20000102_0600_0.grb  40.128_EI_OPER_0001_AN_N128_20000102_1200_0.grb  40.128_EI_OPER_0001_AN_N128_20000102_1800_0.grb
tests/test_data/era_interim/: 39.128_EI_OPER_0001_AN_N128_20000101_0000_0.grb  39.128_EI_OPER_0001_AN_N128_20000101_1200_0.grb
tests/tests_era5/: test_download.py  test_era5_download.py  test_era5_download_cds.py  test_era5_interface.py  test_era5_reshuffle.py
tests/tests_eraint/: test_download.py  test_eraint_download.py  test_eraint_interface.py  test_eraint_reshuffle.py
