[metadata]
name = ecmwf_models
summary = Downloading, reading and TS conversion of ECMWF reanalysis data
author = Christoph Paulik
author-email = christoph.paulik@geo.tuwien.ac.at
license = mit
home-page = http://www.github.com/TUW-GEO/ecmwf_models
description-file = README.rst
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = ecmwf_models.module:function
# For example:
# console_scripts =
#     fibonacci = ecmwf_models.skeleton:run
# as well as other entry_points.
console_scripts =
      eraint_download = ecmwf_models.download_eraint:run
      era5_download = ecmwf_models.download_era5:run
      ecmwf_repurpose = ecmwf_models.reshuffle:run


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
    ecmwf_models
# data_files =
#    share/ecmwf_models_docs = docs/*

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP

[test]
# py.test options when running `python setup.py test`
addopts = tests

[pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov ecmwf_models --cov-report term-missing
    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
